// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Upload > Upload baseVue demo works fine 1`] = `
<div
  class="upload-demo"
  data-v-4dac5dd5=""
>
  <div
    class="upload-title"
    data-v-4dac5dd5=""
  >
    单选上传
  </div>
  <div
    class="t-upload"
    data-v-4dac5dd5=""
  >
    
    
    <div
      class="t-upload__item t-upload__item--add"
    >
      <div
        class="t-upload__add-icon"
      >
        <svg
          class="t-icon t-icon-add"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <input
      accept="image/png"
      hidden=""
      type="file"
    />
    <!---->
  </div>
</div>
`;

exports[`Upload > Upload customVue demo works fine 1`] = `
<div
  class="upload-demo"
  data-v-b50ff116=""
>
  <div
    class="upload-title"
    data-v-b50ff116=""
  >
    请上传身份证人像面
  </div>
  <div
    class="upload-content"
    data-v-b50ff116=""
  >
    <div
      class="t-upload front"
      data-v-b50ff116=""
    >
      
      
      <div
        class="t-upload__item t-upload__item--add"
      >
        <div
          class="t-upload__add-icon"
        >
          
          <div
            class="add-content"
            data-v-b50ff116=""
          >
            <div
              class="t-image t-image--square"
              data-v-b50ff116=""
              style="width: 32px; height: 32px;"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload3.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
          </div>
          
        </div>
      </div>
      <input
        accept="image/png"
        hidden=""
        type="file"
      />
      <!---->
    </div>
  </div>
  <div
    class="upload-title"
    data-v-b50ff116=""
  >
    请上传身份证国徽面
  </div>
  <div
    class="upload-content"
    data-v-b50ff116=""
  >
    <div
      class="t-upload reverse"
      data-v-b50ff116=""
    >
      
      
      <div
        class="t-upload__item t-upload__item--add"
      >
        <div
          class="t-upload__add-icon"
        >
          
          <div
            class="add-content"
            data-v-b50ff116=""
          >
            <div
              class="t-image t-image--square"
              data-v-b50ff116=""
              style="width: 32px; height: 32px;"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload3.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
          </div>
          
        </div>
      </div>
      <input
        accept="image/png"
        hidden=""
        type="file"
      />
      <!---->
    </div>
  </div>
</div>
`;

exports[`Upload > Upload mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Upload上传
  </h1>
  <p
    class="summary"
  >
    用于相册读取或拉起拍照的图片上传功能。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选上传
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="upload-demo"
        data-v-4dac5dd5=""
      >
        <div
          class="upload-title"
          data-v-4dac5dd5=""
        >
          单选上传
        </div>
        <div
          class="t-upload"
          data-v-4dac5dd5=""
        >
          
          
          <div
            class="t-upload__item t-upload__item--add"
          >
            <div
              class="t-upload__add-icon"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <input
            accept="image/png"
            hidden=""
            type="file"
          />
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        多选上传
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="upload-demo"
        data-v-5eaaef94=""
      >
        <div
          class="upload-title"
          data-v-5eaaef94=""
        >
          多选上传
        </div>
        <div
          class="t-upload"
          data-v-5eaaef94=""
          grid-config="[object Object]"
        >
          
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <!---->
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload6.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <!---->
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <!---->
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
                fill="currentColor"
              />
            </svg>
          </div>
          
          <div
            class="t-upload__item t-upload__item--add"
          >
            <div
              class="t-upload__add-icon"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <input
            accept=""
            hidden=""
            multiple=""
            type="file"
          />
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        加载状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="upload-demo"
        data-v-12872376=""
      >
        <div
          class="upload-title"
          data-v-12872376=""
        >
          上传图片
        </div>
        <div
          class="t-upload"
          data-v-12872376=""
        >
          
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload6.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <div
              class="t-upload__progress-mask"
            >
              
              <svg
                class="t-icon t-icon-loading t-upload__progress-loading"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 2.25C6.61556 2.25 2.25 6.61556 2.25 12C2.25 17.3844 6.61556 21.75 12 21.75V19.3125C7.96142 19.3125 4.6875 16.0386 4.6875 12C4.6875 7.96142 7.96142 4.6875 12 4.6875C16.0386 4.6875 19.3125 7.96142 19.3125 12H21.75C21.75 6.61556 17.3844 2.25 12 2.25Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="t-upload__progress-text"
              >
                上传中...
              </div>
              
              <!---->
            </div>
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <div
              class="t-upload__progress-mask"
            >
              
              <svg
                class="t-icon t-icon-loading t-upload__progress-loading"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 2.25C6.61556 2.25 2.25 6.61556 2.25 12C2.25 17.3844 6.61556 21.75 12 21.75V19.3125C7.96142 19.3125 4.6875 16.0386 4.6875 12C4.6875 7.96142 7.96142 4.6875 12 4.6875C16.0386 4.6875 19.3125 7.96142 19.3125 12H21.75C21.75 6.61556 17.3844 2.25 12 2.25Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="t-upload__progress-text"
              >
                68%
              </div>
              
              <!---->
            </div>
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
                fill="currentColor"
              />
            </svg>
          </div>
          
          <div
            class="t-upload__item t-upload__item--add"
          >
            <div
              class="t-upload__add-icon"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <input
            accept="image/png"
            hidden=""
            multiple=""
            type="file"
          />
          <!---->
        </div>
      </div>
      <div
        class="upload-demo__title"
        data-v-12872376=""
      >
        上传失败
      </div>
      <div
        class="upload-demo"
        data-v-12872376=""
      >
        <div
          class="upload-title"
          data-v-12872376=""
        >
          上传图片
        </div>
        <div
          class="t-upload"
          data-v-12872376=""
        >
          
          <div
            class="t-upload__item"
          >
            <div
              class="t-image t-image--round t-upload__image"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!---->
                  <!---->
                </div>
              </div>
              <picture>
                <!---->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
            <div
              class="t-upload__progress-mask"
            >
              <svg
                class="t-icon t-icon-close-circle"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM23 12C23 18.0751 18.0751 23 12 23C5.92487 23 0.999999 18.0751 1 12C1 5.92487 5.92487 0.999999 12 1C18.0751 1 23 5.92487 23 12ZM7.40347 15.1823L10.5858 12L7.40347 8.81768L8.81768 7.40347L12 10.5858L15.1816 7.40415L16.5959 8.81836L13.4142 12L16.5959 15.1816L15.1816 16.5959L12 13.4142L8.81768 16.5965L7.40347 15.1823Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="t-upload__progress-text"
              >
                上传失败
              </div>
            </div>
            <svg
              class="t-icon t-icon-close t-upload__delete-btn"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
                fill="currentColor"
              />
            </svg>
          </div>
          
          <div
            class="t-upload__item t-upload__item--add"
          >
            <div
              class="t-upload__add-icon"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <input
            accept=""
            hidden=""
            multiple=""
            type="file"
          />
          <!---->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 样式自定义
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选上传
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="upload-demo"
        data-v-b50ff116=""
      >
        <div
          class="upload-title"
          data-v-b50ff116=""
        >
          请上传身份证人像面
        </div>
        <div
          class="upload-content"
          data-v-b50ff116=""
        >
          <div
            class="t-upload front"
            data-v-b50ff116=""
          >
            
            
            <div
              class="t-upload__item t-upload__item--add"
            >
              <div
                class="t-upload__add-icon"
              >
                
                <div
                  class="add-content"
                  data-v-b50ff116=""
                >
                  <div
                    class="t-image t-image--square"
                    data-v-b50ff116=""
                    style="width: 32px; height: 32px;"
                  >
                    <div
                      class="t-image__mask"
                    >
                      <div
                        class="t-loading"
                        style="font-size: 20px;"
                      >
                        <div
                          class="t-loading__dots"
                          style="animation-duration: 800ms; width: 20px; height: 20px;"
                        >
                          
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                          />
                          
                        </div>
                        <!---->
                        <!---->
                      </div>
                    </div>
                    <picture>
                      <!---->
                      <img
                        alt=""
                        class="t-image__img"
                        src="https://tdesign.gtimg.com/mobile/demos/upload3.png"
                        style="object-fit: fill; object-position: center;"
                      />
                    </picture>
                  </div>
                </div>
                
              </div>
            </div>
            <input
              accept="image/png"
              hidden=""
              type="file"
            />
            <!---->
          </div>
        </div>
        <div
          class="upload-title"
          data-v-b50ff116=""
        >
          请上传身份证国徽面
        </div>
        <div
          class="upload-content"
          data-v-b50ff116=""
        >
          <div
            class="t-upload reverse"
            data-v-b50ff116=""
          >
            
            
            <div
              class="t-upload__item t-upload__item--add"
            >
              <div
                class="t-upload__add-icon"
              >
                
                <div
                  class="add-content"
                  data-v-b50ff116=""
                >
                  <div
                    class="t-image t-image--square"
                    data-v-b50ff116=""
                    style="width: 32px; height: 32px;"
                  >
                    <div
                      class="t-image__mask"
                    >
                      <div
                        class="t-loading"
                        style="font-size: 20px;"
                      >
                        <div
                          class="t-loading__dots"
                          style="animation-duration: 800ms; width: 20px; height: 20px;"
                        >
                          
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                          />
                          <div
                            class="t-loading__dot"
                            style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                          />
                          
                        </div>
                        <!---->
                        <!---->
                      </div>
                    </div>
                    <picture>
                      <!---->
                      <img
                        alt=""
                        class="t-image__img"
                        src="https://tdesign.gtimg.com/mobile/demos/upload3.png"
                        style="object-fit: fill; object-position: center;"
                      />
                    </picture>
                  </div>
                </div>
                
              </div>
            </div>
            <input
              accept="image/png"
              hidden=""
              type="file"
            />
            <!---->
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Upload > Upload multipleVue demo works fine 1`] = `
<div
  class="upload-demo"
  data-v-5eaaef94=""
>
  <div
    class="upload-title"
    data-v-5eaaef94=""
  >
    多选上传
  </div>
  <div
    class="t-upload"
    data-v-5eaaef94=""
    grid-config="[object Object]"
  >
    
    <div
      class="t-upload__item"
    >
      <div
        class="t-image t-image--round t-upload__image"
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
              
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <picture>
          <!---->
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
      <!---->
      <svg
        class="t-icon t-icon-close t-upload__delete-btn"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-upload__item"
    >
      <div
        class="t-image t-image--round t-upload__image"
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
              
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <picture>
          <!---->
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/mobile/demos/upload6.png"
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
      <!---->
      <svg
        class="t-icon t-icon-close t-upload__delete-btn"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-upload__item"
    >
      <div
        class="t-image t-image--round t-upload__image"
      >
        <div
          class="t-image__mask"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <div
              class="t-loading__dots"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
              />
              <div
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
              />
              
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <picture>
          <!---->
          <img
            alt=""
            class="t-image__img"
            src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
            style="object-fit: fill; object-position: center;"
          />
        </picture>
      </div>
      <!---->
      <svg
        class="t-icon t-icon-close t-upload__delete-btn"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
          fill="currentColor"
        />
      </svg>
    </div>
    
    <div
      class="t-upload__item t-upload__item--add"
    >
      <div
        class="t-upload__add-icon"
      >
        <svg
          class="t-icon t-icon-add"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <input
      accept=""
      hidden=""
      multiple=""
      type="file"
    />
    <!---->
  </div>
</div>
`;

exports[`Upload > Upload statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="upload-demo"
    data-v-12872376=""
  >
    <div
      class="upload-title"
      data-v-12872376=""
    >
      上传图片
    </div>
    <div
      class="t-upload"
      data-v-12872376=""
    >
      
      <div
        class="t-upload__item"
      >
        <div
          class="t-image t-image--round t-upload__image"
        >
          <div
            class="t-image__mask"
          >
            <div
              class="t-loading"
              style="font-size: 20px;"
            >
              <div
                class="t-loading__dots"
                style="animation-duration: 800ms; width: 20px; height: 20px;"
              >
                
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                />
                
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <picture>
            <!---->
            <img
              alt=""
              class="t-image__img"
              src="https://tdesign.gtimg.com/mobile/demos/upload6.png"
              style="object-fit: fill; object-position: center;"
            />
          </picture>
        </div>
        <div
          class="t-upload__progress-mask"
        >
          
          <svg
            class="t-icon t-icon-loading t-upload__progress-loading"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2.25C6.61556 2.25 2.25 6.61556 2.25 12C2.25 17.3844 6.61556 21.75 12 21.75V19.3125C7.96142 19.3125 4.6875 16.0386 4.6875 12C4.6875 7.96142 7.96142 4.6875 12 4.6875C16.0386 4.6875 19.3125 7.96142 19.3125 12H21.75C21.75 6.61556 17.3844 2.25 12 2.25Z"
              fill="currentColor"
            />
          </svg>
          <div
            class="t-upload__progress-text"
          >
            上传中...
          </div>
          
          <!---->
        </div>
        <svg
          class="t-icon t-icon-close t-upload__delete-btn"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-upload__item"
      >
        <div
          class="t-image t-image--round t-upload__image"
        >
          <div
            class="t-image__mask"
          >
            <div
              class="t-loading"
              style="font-size: 20px;"
            >
              <div
                class="t-loading__dots"
                style="animation-duration: 800ms; width: 20px; height: 20px;"
              >
                
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                />
                
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <picture>
            <!---->
            <img
              alt=""
              class="t-image__img"
              src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
              style="object-fit: fill; object-position: center;"
            />
          </picture>
        </div>
        <div
          class="t-upload__progress-mask"
        >
          
          <svg
            class="t-icon t-icon-loading t-upload__progress-loading"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2.25C6.61556 2.25 2.25 6.61556 2.25 12C2.25 17.3844 6.61556 21.75 12 21.75V19.3125C7.96142 19.3125 4.6875 16.0386 4.6875 12C4.6875 7.96142 7.96142 4.6875 12 4.6875C16.0386 4.6875 19.3125 7.96142 19.3125 12H21.75C21.75 6.61556 17.3844 2.25 12 2.25Z"
              fill="currentColor"
            />
          </svg>
          <div
            class="t-upload__progress-text"
          >
            68%
          </div>
          
          <!---->
        </div>
        <svg
          class="t-icon t-icon-close t-upload__delete-btn"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
            fill="currentColor"
          />
        </svg>
      </div>
      
      <div
        class="t-upload__item t-upload__item--add"
      >
        <div
          class="t-upload__add-icon"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <input
        accept="image/png"
        hidden=""
        multiple=""
        type="file"
      />
      <!---->
    </div>
  </div>
  <div
    class="upload-demo__title"
    data-v-12872376=""
  >
    上传失败
  </div>
  <div
    class="upload-demo"
    data-v-12872376=""
  >
    <div
      class="upload-title"
      data-v-12872376=""
    >
      上传图片
    </div>
    <div
      class="t-upload"
      data-v-12872376=""
    >
      
      <div
        class="t-upload__item"
      >
        <div
          class="t-image t-image--round t-upload__image"
        >
          <div
            class="t-image__mask"
          >
            <div
              class="t-loading"
              style="font-size: 20px;"
            >
              <div
                class="t-loading__dots"
                style="animation-duration: 800ms; width: 20px; height: 20px;"
              >
                
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                />
                <div
                  class="t-loading__dot"
                  style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                />
                
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <picture>
            <!---->
            <img
              alt=""
              class="t-image__img"
              src="https://tdesign.gtimg.com/mobile/demos/upload4.png"
              style="object-fit: fill; object-position: center;"
            />
          </picture>
        </div>
        <div
          class="t-upload__progress-mask"
        >
          <svg
            class="t-icon t-icon-close-circle"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM23 12C23 18.0751 18.0751 23 12 23C5.92487 23 0.999999 18.0751 1 12C1 5.92487 5.92487 0.999999 12 1C18.0751 1 23 5.92487 23 12ZM7.40347 15.1823L10.5858 12L7.40347 8.81768L8.81768 7.40347L12 10.5858L15.1816 7.40415L16.5959 8.81836L13.4142 12L16.5959 15.1816L15.1816 16.5959L12 13.4142L8.81768 16.5965L7.40347 15.1823Z"
              fill="currentColor"
            />
          </svg>
          <div
            class="t-upload__progress-text"
          >
            上传失败
          </div>
        </div>
        <svg
          class="t-icon t-icon-close t-upload__delete-btn"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M7.04996 5.63599L11.9997 10.5857L16.9494 5.63599L18.3637 7.0502L13.4139 11.9999L18.3637 16.9497L16.9494 18.3639L11.9997 13.4142L7.04996 18.3639L5.63574 16.9497L10.5855 11.9999L5.63574 7.0502L7.04996 5.63599Z"
            fill="currentColor"
          />
        </svg>
      </div>
      
      <div
        class="t-upload__item t-upload__item--add"
      >
        <div
          class="t-upload__add-icon"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <input
        accept=""
        hidden=""
        multiple=""
        type="file"
      />
      <!---->
    </div>
  </div>
  
</div>
`;
